--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/styles.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/styles.css
@@ -10,6 +10,7 @@
 /* @import url(_swiper.css); */
 /* @import url(_footer.css); */
 
+
 :root {
 	--main-font: "Inter", sans-serif;
 	--help-font: "Kumbh Sans", sans-serif;
@@ -29,9 +30,6 @@
 	--light_color_absolute: #fff;
 	--corporate-color: #FFD11A;
 }
-
-
-
 
 * {
 	margin: 0;
@@ -310,6 +308,8 @@ p,
 	left: 86px;
 }
 
+/* TODO  hero-section*/
+
 .first-screen {
 	/* height: 100vh; */
 	background-color: var(--dark-color_08);
@@ -544,6 +544,7 @@ p,
 	margin-left: 16px;
 }
 
+
 /* TODO grid-container__future-tech-features mobile-version*/
 
 .title-container {
@@ -638,6 +639,8 @@ p,
 	flex: 0 0 100%;
 }
 
+/*----------------------------------*/
+/* TODO  future-tech-features*/
 .future-tech-features__grid-parent_child-1>.future-tech-features__item-inner-container>.icon {
 	width: 40px;
 	height: 40px;
@@ -669,6 +672,7 @@ p,
 .parent-grid-child4__future-tech-features_first_content>div>h4 {
 	margin-bottom: 4px;
 }
+
 
 /* TODO start explore-futureTech*/
 .explore-futureTech__head-container>.content-wrap>.title-container {
@@ -726,8 +730,7 @@ p,
 	border: 1px solid var(--dark-color_20);
 }
 
-/*--------------------------------------------*/
-
+/* TODO unlock-valuable-knowledge*/
 .unlock-valuable-knowledge__head-container_btn,
 .real-words-from-real-readers__head-container_btn {
 	max-width: 720px;
@@ -918,8 +921,6 @@ p,
 }
 
 
-
-
 /* TODO start real-words-from-real-readers*/
 
 .real-words-from-real-readers__body-container {
@@ -953,7 +954,7 @@ p,
 	background-repeat: no-repeat;
 }
 
-.avatar1 {
+/* .avatar1 {
 	background-image: url(../sourse/img/Profile/profile-1.jpg);
 }
 
@@ -975,7 +976,7 @@ p,
 
 .avatar6 {
 	background-image: url(../sourse/img/Profile/profile-6.jpg);
-}
+} */
 
 .real-words-from-real-readers__info {
 	display: flex;
@@ -1045,131 +1046,191 @@ p,
 	margin-bottom: 4px;
 }
 
-
-/* -------------------------------------*/
+/*-----------------------------*/
 .be-part-of-the-future-tech-revolution__body-container_item {
-	/* border: 1px solid red; */
-	background-color: var(--dark-color_12);
-	border-radius: 10px;
-	/* gap: 100px; */
-	padding: 24px;
+
+	/* background-color: var(--dark-color_12);
+		border-radius: 10px;
+
+			padding: 24px; */
 }
 
 .be-part-of-the-future-tech-revolution__body-container {
-
 	border: 1px solid var(--dark-color_15);
 	background-color: var(--dark-color_08);
-	/* border: 1px solid rgb(0, 255, 26); */
+	padding: 10px 10px 20px 10px;
+	/* position: relative; */
+
+	/* border: 1px solid var(--dark-color_15);
+	background-color: var(--dark-color_08);
+
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	padding: 10px;
-	/* flex-direction: row; */
+
 	gap: 10px;
-	/* align-items: stretch; */
-	margin-bottom: 40px;
+
+	margin-bottom: 40px; */
 }
 
 .be-part-of-the-future-tech-revolution__body-container-helper {
+	/* margin-bottom: 10px; */
+}
+
+.be-part-of-the-future-tech-revolution__general-container {
+	/* position: relative; */
+}
+
+.be-part-of-the-future-tech-revolution__body-container_item {
+	/* flex: 0 0 calc(100% / 3); */
+	box-sizing: border-box;
+	background-color: var(--dark-color_12);
+	border-radius: 10px;
+	padding: 24px;
+	display: flex;
+	/* flex-direction: column; */
+	/* Розташування елементів по вертикалі */
+	/* justify-content: space-between; */
+	/* Вирівнювання контенту по висоті */
+	/* min-height: 200px; */
+	/* Задайте мінімальну висоту */
+	/* height: 100%; */
+	/* Висота буде однаковою для всіх */
+}
+
+.be-part-of-the-future-tech-revolution__body-container_title {
 	margin-bottom: 10px;
 }
 
-/* TODO swiper-container2 */
-.swiper-container2 {
+.be-part-of-the-future-tech-revolution__body-container_content {}
+
+
+/* TODO  swiper*/
+/* .inner {
+	border: 1px solid red;
+	margin: 150px;
+} */
+
+.swiper-container {
 	width: 100%;
+	/* Ширина контейнера */
 	overflow: hidden;
+	/* Приховує все, що виходить за межі контейнера */
 }
 
 .swiper-wrapper {
-	display: flex;
+	/* display: flex; */
+	/* Додає горизонтальне розташування слайдів */
 	transition: transform 0.3s ease;
+	/* Плавне прокручування */
+	/* gap: 10px; */
+	align-items: stretch;
+	/* height: 100%; */
 }
 
 .swiper-slide {
-	flex-shrink: 0;
+	background-color: var(--dark-color_12);
+	border: 1px solid var(--dark-color_15);
+
+	/* flex-shrink: 0; */
+	/* Слайди не стискаються */
 	width: 100%;
-	max-width: calc((100% - 40px) / 3);
+	/* Базова ширина слайдів */
+	/* max-width: calc((100% - 40px) / 3); */
+	/* Ширина для трьох слайдів на великих екранах */
 	/* height: 200px; */
-	/* background: #f5f5f5; */
+	/* Фіксована висота слайдів */
+	/* background: #414141; */
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	text-align: center;
-	/* border: 1px solid #ccc; */
-	box-sizing: border-box;
-	opacity: 1;
+	/* justify-content: center;
+	align-items: center;
+	text-align: center; */
+
+	/* box-sizing: border-box; */
+	/* opacity: 1; */
+	/* Початкова видимість */
 	transition: opacity 0.3s ease;
+	/* Плавний перехід видимості */
+	/* align-items: stretch; */
+	/* height: 100%; */
+	/* justify-content: space-between; */
+
+	/* flex: 0 0 calc(100% / 3); */
+	/* box-sizing: border-box; */
+
+	border-radius: 10px;
+	padding: 24px;
+	display: flex;
+	flex-direction: column;
+	/* Розташування елементів по вертикалі */
+	/* justify-content: space-between; */
+	/* Вирівнювання контенту по висоті */
+	min-height: 200px;
+	/* Задайте мінімальну висоту */
+	/* height: 100%; */
+	/* Висота буде однаковою для всіх */
+
 }
 
 .swiper-slide.swiper-slide-hidden {
-	opacity: 0;
+	/* opacity: 0; */
+	/* Приховані слайди невидимі */
 }
 
-/* Стилі для навігаційного блоку */
 .swiper-navigation {
-	display: flex;
-	justify-content: space-between;
-	/* Розташовує елементи з відступами між ними */
-	align-items: center;
-	/* Вирівнює елементи по вертикалі */
-	width: 100%;
-	/* Встановлює ширину контейнера для навігації */
-	border: 2px solid blue;
-	/* Синій бордер для виділення */
-	margin-top: 10px;
-	/* Відступ зверху від слайдів */
-	padding: 10px 0;
-	/* Внутрішні відступи для навігації */
-	position: relative;
-	/* Для коректної роботи відносно позицій */
-}
-
-.swiper-button-prev,
-.swiper-button-next {
-	width: 30px;
-	height: 30px;
-	background-color: #ccc;
-	display: inline-block;
-	border-radius: 50%;
-	cursor: pointer;
-	position: absolute;
-	/* Розміщує кнопки абсолютно всередині контейнера */
-	top: 50%;
-	/* Вирівнює кнопки по вертикалі */
-	transform: translateY(-50%);
-	/* Центрує кнопки по вертикалі */
+	/* position: relative;
+	border: 3px solid green;
+	padding: 20px 0; */
+	height: 20px;
+	/* border: 3px solid green; */
+	/* position: absolute; */
+	/* bottom: -110px; */
+	/* Відступ від нижнього краю */
+	/* width: 100%;
+			display: flex;
+			justify-content: space-between !important; */
+	/* position: relative!important; */
+	/* position: absolute; */
+	/* position: static; */
 }
 
 .swiper-button-prev {
-	left: 10px !important;
-	top: 10px !important;
-	/* Розташовує кнопку на лівій стороні */
+	position: absolute;
+	/* border: 3px solid rgb(105, 253, 6); */
+	color: var(--light_color_absolute) !important;
 }
 
 .swiper-button-next {
-	right: 10px !important;
-	top: 10px !important;
-	/* Розташовує кнопку на правій стороні */
+	position: absolute;
+	/* border: 3px solid rgb(6, 112, 187); */
+	color: var(--light_color_absolute) !important;
 }
 
-/* Індикатор пагінації */
 .swiper-pagination {
+	/* position: absolute; */
+	/* border: 3px solid rgb(253, 23, 6); */
+	/* top: 90px !important; */
+	/* margin-bottom: 120px; */
+	position: absolute;
+	bottom: -5px !important;
+	color: var(--light_color_absolute) !important;
+	--swiper-theme-color: #f6f6f7;
+	/* Відступ під swiper-wrapper */
+	/* left: 50%;
+	transform: translateX(-50%);
 	display: flex;
-	justify-content: center;
-	/* Вирівнює пагінацію по центру */
-	width: 100%;
-	margin-top: 10px;
-	/* Відступ між кнопками і пагінацією */
+	gap: 5px;
+	justify-content: center; */
 }
 
-@media (max-width: 768px) {
-	.swiper-slide {
-		max-width: 100%;
-	}
+.swiper-pagination-bullet {
+	background-color: var(--dark-color_40) !important;
 }
 
-/*TODO footer */
-
+/* TODO footer */
 /* .footer-menu {
 	border: 1px solid red;
 } */
@@ -1275,6 +1336,24 @@ p,
 	flex: 1 1 auto;
 	/* Забезпечує гнучкість елементів */
 }
+
+
+@media (max-width: 768px) {
+	.swiper-slide {
+		max-width: 100%;
+		/* Слайди займають всю ширину на малих екранах */
+		padding: 30px;
+	}
+}
+
+@media (min-width: 1920px) {
+	.swiper-slide {
+		max-width: 100%;
+		/* Слайди займають всю ширину на малих екранах */
+		padding: 40px;
+	}
+}
+
 
 
 @media (max-width: 768px) {
@@ -1577,9 +1656,9 @@ p,
 		border: 1px solid var(--dark-color_15);
 	}
 
-	/* TODO   swiper*/
+	/* TODO   swiper ------- explore*/
 
-	.swiper-container {
+	/* .swiper-container {
 		justify-content: space-between;
 		overflow: auto;
 	}
@@ -1588,23 +1667,10 @@ p,
 		flex: 0 0 auto;
 		min-width: 199px;
 		height: 69px;
-		/* margin: 20px 7px; */
-		/* padding: 0 11px; */
-		/* text-align: center; */
-		line-height: 69px;
-		/* background-color: #007BFF;
-									color: white; */
-		/* border-radius: 8px; */
-		/* cursor: pointer; */
 
-		/* flex: 1;
-		      	margin: 10px;
-		      	width: auto;
-		      	max-width: 100%;
-		      	text-align: center;
-		      	line-height: 50px;
-		      	height: 50px; */
-	}
+		line-height: 69px;
+
+	} */
 
 
 	/* TODO start unlock-valuable-knowledge  deskto-version*/
