--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_be-part-of-the-future-tech-revolution.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_be-part-of-the-future-tech-revolution.css
@@ -1,57 +1,22 @@
-.be-part-of-the-future-tech-revolution__body-container_item{
-
-	/* background-color: var(--dark-color_12);
-		border-radius: 10px;
-
-			padding: 24px; */
-}
-.be-part-of-the-future-tech-revolution__body-container{
-border: 1px solid var(--dark-color_15);
+.be-part-of-the-future-tech-revolution__body-container {
+	border: 0.0625rem solid var(--dark-color_15);
+	/* 1px */
 	background-color: var(--dark-color_08);
-	padding: 10px 10px 20px 10px;
-	/* position: relative; */
-
-	/* border: 1px solid var(--dark-color_15);
-	background-color: var(--dark-color_08);
-
-	border-radius: 10px;
-	display: flex;
-	flex-direction: column;
-	padding: 10px;
-
-	gap: 10px;
-
-	margin-bottom: 40px; */
-}
-
-.be-part-of-the-future-tech-revolution__body-container-helper{
-	/* margin-bottom: 10px; */
-}
-
-.be-part-of-the-future-tech-revolution__general-container{
-	/* position: relative; */
+	padding: 0.625rem 0.625rem 1.25rem 0.625rem;
+	/* 10px 10px 20px 10px */
 }
 
 .be-part-of-the-future-tech-revolution__body-container_item {
-	/* flex: 0 0 calc(100% / 3); */
 	box-sizing: border-box;
 	background-color: var(--dark-color_12);
-	border-radius: 10px;
-	padding: 24px;
+	border-radius: 0.625rem;
+	/* 10px */
+	padding: 1.5rem;
+	/* 24px */
 	display: flex;
-	/* flex-direction: column; */
-	/* Розташування елементів по вертикалі */
-	/* justify-content: space-between; */
-	/* Вирівнювання контенту по висоті */
-	/* min-height: 200px; */
-	/* Задайте мінімальну висоту */
-	/* height: 100%; */
-	/* Висота буде однаковою для всіх */
 }
 
-.be-part-of-the-future-tech-revolution__body-container_title{
-	margin-bottom: 10px;
-}
-.be-part-of-the-future-tech-revolution__body-container_content{
-	
+.be-part-of-the-future-tech-revolution__body-container_title {
+	margin-bottom: 0.625rem;
+	/* 10px */
 }
