--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_future-tech-features.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_future-tech-features.css
@@ -1,29 +1,43 @@
-
-
 .future-tech-features__grid-parent_child-1>.future-tech-features__item-inner-container>.icon {
-	width: 40px;
-	height: 40px;
-	background-position: -73px -76px;
+	width: 2.5rem;
+	/* 40px */
+	height: 2.5rem;
+	/* 40px */
+	background-position: -4.5625rem -4.75rem;
+	/* -73px -76px */
 	background-size: 450%;
-	margin-bottom: 25px;
-}
-.future-tech-features__grid-parent_child-2> .future-tech-features__item-inner-container>.icon {
-	width: 58px;
-	height: 50px;
-	background-position: -8px -6px;
-	background-size: 300%;
-	margin-bottom: 20px;
-}
-.future-tech-features__title_h3{
-	margin-bottom: 6px;
+	margin-bottom: 1.5625rem;
+	/* 25px */
 }
 
-.parent-grid-child2__future-tech-features_first_content> div, .parent-grid-child4__future-tech-features_second_content>div{
-padding: 24px;
-border-radius: 10px;
-background-color: var(--dark-color_10);
-border: 1px solid var(--dark-color_15);
+.future-tech-features__grid-parent_child-2>.future-tech-features__item-inner-container>.icon {
+	width: 3.625rem;
+	/* 58px */
+	height: 3.125rem;
+	/* 50px */
+	background-position: -0.5rem -0.375rem;
+	/* -8px -6px */
+	background-size: 300%;
+	margin-bottom: 1.25rem;
+	/* 20px */
 }
-.parent-grid-child4__future-tech-features_first_content>div>h4{
-	margin-bottom: 4px;
+
+.future-tech-features__title_h3 {
+	margin-bottom: 0.375rem;
+	/* 6px */
+}
+
+.parent-grid-child2__future-tech-features_first_content>div,
+.parent-grid-child4__future-tech-features_second_content>div {
+	padding: 1.5rem;
+	/* 24px */
+	border-radius: 0.625rem;
+	/* 10px */
+	background-color: var(--dark-color_10);
+	border: 1px solid var(--dark-color_15);
+}
+
+.parent-grid-child4__future-tech-features_first_content>div>h4 {
+	margin-bottom: 0.25rem;
+	/* 4px */
 }
