--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_hero-section.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_hero-section.css
@@ -1,120 +1,141 @@
-.first-screen {
-	/* height: 100vh; */
+/* .first-screen {
 	background-color: var(--dark-color_08);
 }
 
 .top-banner {
-	min-height: 74px;
-	/** min- для того, щоб при маштабуванні контент в top-banner__content не виходив за межі даного блоку*/
-	padding: 41px 8px 15px;
-	/**внутрішній відступ по відношенню до content-wrap*/
-	gap: 10px;
+	min-height: 4.625rem;
+	padding: 2.5625rem 0.5rem 0.9375rem;
+	gap: 0.625rem;
 	border-bottom: 1px solid var(--dark-color_15);
 	background-color: var(--dark-color_08);
 }
 
 .top-banner__content {
-	font-size: 12px;
-	line-height: 18px;
+	font-size: 0.75rem;
+	line-height: 1.125rem;
 	color: var(--grey-color_60);
 }
 
 .nav-bar {
-	height: 75px;
+	height: 4.6875rem;
 }
 
 .logo-header {
-	width: 125.23px;
-	height: 35px;
-	margin: 20px 0 20px;
+	width: 7.826rem;
+	height: 2.1875rem;
+	margin: 1.25rem 0 1.25rem;
 }
 
 .logo-header__img {
-	width: 35px;
-	height: 35px;
+	width: 2.1875rem;
+	height: 2.1875rem;
 }
 
 .logo-header__title {
-	font-size: 12.01px;
+	font-size: 0.75rem;
 	font-weight: 700;
 	color: var(--light_color_absolute);
 	margin: auto 0;
-	padding-left: 8.97px;
+	padding-left: 0.561rem;
 }
 
 .burger-icons {
-	width: 500px;
-	height: 50px;
+	width: 31.25rem;
+	height: 3.125rem;
 }
 
 .main-menu .burger-menu {
 	color: var(--grey-color_50);
-}
+} */
+
+
+
+
+
+
+
+
+
+
+
+
 
 .mobile-menu {
 	width: 100vw;
-	height: calc(100vh - 185px - 70px);
+	height: calc(100vh - 11.5625rem - 4.375rem);
 	left: -10000px;
-	top: 185px;
+	top: 10rem;
 	flex-direction: column;
-	gap: 20px;
+	gap: 1.25rem;
 	font-size: 3rem;
 	color: var(--grey-color_50);
 	transition: all 1.2s ease;
+	background-color: var(--dark-color_08);
+	z-index: 1;
 }
 
 .btn__header-mobile {
 	left: -10000px;
 }
 
+
+
+
+
+
+
+
+/* 
+
 #btnMobileHeader>.btn {
-	width: 103px;
-	height: 41px;
-	border-radius: 6px;
-	size: 14px;
+	width: 6.4375rem;
+	height: 2.5625rem;
+	border-radius: 0.375rem;
+	size: 0.875rem;
 	font-weight: 500;
 	background-color: var(--corporate-color);
+	margin-top: -1.875rem;
+	z-index: 5;
 }
 
 .burger-menu {
-	min-width: 25.5px;
-	height: 17px;
+	min-width: 1.59375rem;
+	height: 1.0625rem;
 	color: var(--light_color_absolute);
 	cursor: pointer;
 	margin-right: 0;
 }
 
 #closeIcon {
-	font-size: 25.5px;
-	margin-top: -4px;
-	margin-left: 4px;
+	font-size: 1.59375rem;
+	margin-top: -0.25rem;
+	margin-left: 0.25rem;
 }
 
-/*! start - first-screen__wiht-out-header*/
 .title-banner {
-	padding: 40px 0 30px;
+	padding: 2.5rem 0 1.875rem;
 }
 
 .title-container__under-title {
-	font-size: 18px;
+	font-size: 1.125rem;
 	font-family: var(--help-font);
 	color: var(--dark-color_40);
-	margin-bottom: 14px;
+	margin-bottom: 0.875rem;
 }
 
 .title-container__title {
-	margin-bottom: 10px;
+	margin-bottom: 0.625rem;
 }
 
 .title-container__content {
-	font-size: 14px;
+	font-size: 0.875rem;
 	font-family: var(--main-font);
 	color: var(--grey-color_50);
 }
 
 .indicators-item {
-	max-height: 118px;
-	padding: 20px 0;
+	max-height: 7.375rem;
+	padding: 1.25rem 0;
 	border-top: 1px solid var(--dark-color_15);
 }
 
@@ -125,16 +146,16 @@
 
 .item-2,
 .item-3 {
-	padding-left: 20px;
-	padding-right: 20px;
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
 }
 
 .item-1 {
-	padding-right: 20px;
+	padding-right: 1.25rem;
 }
 
 .number {
-	font-size: 24px;
+	font-size: 1.5rem;
 	font-weight: 600;
 	font-family: var(--main-font);
 	color: var(--light_color_absolute);
@@ -145,7 +166,7 @@
 }
 
 .comment {
-	font-size: 14px;
+	font-size: 0.875rem;
 	font-weight: 400;
 }
 
@@ -159,75 +180,74 @@
 	background-repeat: no-repeat;
 }
 
-.content_solar-corona__users-img{
-	margin: 230px 24px 20px;
+.content_solar-corona__users-img {
+	margin: 14.375rem 1.5rem 1.25rem;
 }
 
 .first-screen__content_solar-corona_title {
-	margin: 0 24px 4px;
+	margin: 0 1.5rem 0.25rem;
 }
 
 .first-screen__content_solar-corona_comment {
-	margin: 4px 24px 20px;
+	margin: 0.25rem 1.5rem 1.25rem;
 }
 
 .btn-main-indicators {
-	margin: 20px 24px 40px;
+	margin: 1.25rem 1.5rem 2.5rem;
 	background-color: var(--dark-color_08);
-	border-radius: 8px;
+	border-radius: 0.5rem;
 	border: 1px solid var(--dark-color_15);
-	padding: 14px 0;
+	padding: 0.875rem 0;
 	justify-content: center;
 	align-items: center;
-	gap: 4px;
+	gap: 0.25rem;
 }
 
 .information-board__item>.icon {
-	width: 30px;
-	height: 30px;
-	margin-top: 30px;
+	width: 1.875rem;
+	height: 1.875rem;
+	margin-top: 1.875rem;
 	background-image: url(../sourse/img/sprite/css_sprites.png);
 	background-repeat: no-repeat;
 	background-size: 600%;
 }
 
 .information-board__item {
-	max-height: 184px;
+	max-height: 11.5rem;
 	border-bottom: 1px solid var(--dark-color_15);
 	border-bottom: 1px solid #262626;
 }
 
 .first-item>.icon {
-	background-position: -141px -50px;
+	background-position: -8.8125rem -3.125rem;
 }
 
 .second-item>.icon {
-	background-position: -141px -7px;
+	background-position: -8.8125rem -0.4375rem;
 }
 
 .third-item>.icon {
-	background-position: -5px -133px;
+	background-position: -0.3125rem -8.3125rem;
 }
 
 .information-board__content {
-	margin-top: 16px;
-
+	margin-top: 1rem;
 }
 
 .information-board__content_title {
-	margin-bottom: 2px;
+	margin-bottom: 0.125rem;
 }
 
 .information-board_content>.comment {
-	font-size: 14px;
+	font-size: 0.875rem;
 	font-weight: 400;
 }
 
 .information-board__item>.comment {
-	margin-top: 10px;
-	margin-bottom: 30px;
+	margin-top: 0.625rem;
+	margin-bottom: 1.875rem;
 }
 
 .information-board__content>button {
-	margin-left: 16px;
-}
+	margin-left: 1rem;
+} */
