--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_real-words-from-real-readers.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_real-words-from-real-readers.css
@@ -2,7 +2,8 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	border-bottom: 1px solid var(--dark-color_15);
+	border-bottom: 0.0625rem solid var(--dark-color_15);
+	/* 1px */
 }
 
 .real-words-from-real-readers__card {
@@ -10,47 +11,54 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	min-height: 314px;
-	border-bottom: 1px solid var(--dark-color_15);
+	min-height: 19.625rem;
+	/* 314px */
+	border-bottom: 0.0625rem solid var(--dark-color_15);
+	/* 1px */
 }
 
 .real-words-from-real-readers__header {
-	padding: 0 20px;
-	margin: 40px 0;
+	padding: 0 1.25rem;
+	/* 20px */
+	margin: 2.5rem 0;
+	/* 40px */
 }
 
 .real-words-from-real-readers__avatar {
-	width: 50px;
-	height: 50px;
+	width: 3.125rem;
+	/* 50px */
+	height: 3.125rem;
+	/* 50px */
 	border-radius: 50%;
-	margin-right: 10px;
+	margin-right: 0.625rem;
+	/* 10px */
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
 }
 
 /* .avatar1 {
-	background-image: url(../sourse/img/Profile/profile-1.jpg);
+    background-image: url(../sourse/img/Profile/profile-1.jpg);
 }
 
 .avatar2 {
-	background-image: url(../sourse/img/Profile/profile-2.jpg);
+    background-image: url(../sourse/img/Profile/profile-2.jpg);
 }
 
 .avatar3 {
-	background-image: url(../sourse/img/Profile/profile-3.jpg);
+    background-image: url(../sourse/img/Profile/profile-3.jpg);
 }
 
 .avatar4 {
-	background-image: url(../sourse/img/Profile/profile-4.jpg);
+    background-image: url(../sourse/img/Profile/profile-4.jpg);
 }
 
 .avatar5 {
-	background-image: url(../sourse/img/Profile/profile-5.jpg);
+    background-image: url(../sourse/img/Profile/profile-5.jpg);
 }
 
 .avatar6 {
-	background-image: url(../sourse/img/Profile/profile-6.jpg);
+    background-image: url(../sourse/img/Profile/profile-6.jpg);
 } */
 
 .real-words-from-real-readers__info {
@@ -60,30 +68,40 @@
 }
 
 .real-words-from-real-readers__info p {
-	font-size: 16px;
+	font-size: 1rem;
+	/* 16px */
 }
 
 .stars {
 	position: absolute;
-	margin-top: 133px;
-	min-width: 140px;
-	min-height: 36px;
+	margin-top: 8.3125rem;
+	/* 133px */
+	min-width: 8.75rem;
+	/* 140px */
+	min-height: 2.25rem;
+	/* 36px */
 	text-align: center;
-	font-size: 20px;
+	font-size: 1.25rem;
+	/* 20px */
 	color: #ffc107;
 	border-radius: 100px;
 	background-color: var(--dark-color_08);
-	border: 1px solid var(--dark-color_15);
+	border: 0.0625rem solid var(--dark-color_15);
+	/* 1px */
 }
 
 .real-words-from-real-readers__content {
-	margin-bottom: 40px;
-	padding: 30px 20px 20px;
+	margin-bottom: 2.5rem;
+	/* 40px */
+	padding: 1.875rem 1.25rem 1.25rem;
+	/* 30px 20px 20px */
 	line-height: 1.5;
-	border: 1px solid rgb(246, 255, 0);
+	border: 0.0625rem solid rgb(246, 255, 0);
+	/* 1px */
 	background-color: var(--dark-color_10);
-	border: 1px solid var(--dark-color_15);
-	border-radius: 10px;
+	border: 0.0625rem solid var(--dark-color_15);
+	/* 1px */
+	border-radius: 0.625rem;
+	/* 10px */
 	color: var(--light_color_absolute);
 }
-
