--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_unlock-valuable-knowledge.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/_unlock-valuable-knowledge.css
@@ -1,113 +1,112 @@
 .unlock-valuable-knowledge__head-container_btn,
 .real-words-from-real-readers__head-container_btn {
-	max-width: 720px;
-	max-height: 49px;
-	padding: 14px 20px;
-	gap: 4px;
+	max-width: 45rem;
+	max-height: 3.0625rem;
+	padding: 0.875rem 1.25rem;
+	gap: 0.25rem;
 	background-color: var(--dark-color_08);
-	border: 1px solid var(--dark-color_15);
-	margin-bottom: 40px;
+	border: 0.0625rem solid var(--dark-color_15);
+	margin-bottom: 2.5rem;
 }
 
 .body-container_first-floor>.unlock-valuable-knowledge__item-inner-container>.icon {
-	width: 50px;
-	height: 50px;
-	background-position: -8px -52px;
+	width: 3.125rem;
+	height: 3.125rem;
+	background-position: -0.5rem -3.25rem;
 	background-size: 300%;
-	margin-bottom: 24px;
+	margin-bottom: 1.5rem;
 }
 
 .body-container_second-floor>.unlock-valuable-knowledge__item-inner-container>.icon {
-	width: 50px;
-	height: 50px;
-	background-position: -63px -6px;
+	width: 3.125rem;
+	height: 3.125rem;
+	background-position: -3.9375rem -0.375rem;
 	background-size: 300%;
-	margin-bottom: 24px;
+	margin-bottom: 1.5rem;
 }
 
 .unlock-valuable-knowledge__title_h3 {
-	margin-bottom: 4px;
+	margin-bottom: 0.25rem;
 }
 
 .unlock-valuable-knowledge_title_h3-comment {
-	margin-bottom: 24px;
+	margin-bottom: 1.5rem;
 }
 
 .unlock-valuable-knowledge__item-inner-container>.unlock-valuable-knowledge__body-container_btn {
-	max-width: 100vw;
-	max-height: 57px;
-	padding: 18px 0;
-	gap: 4px;
-	border-radius: 6px;
+max-width: 100vw;
+	max-height: 3.5625rem;
+	padding: 1.125rem 0;
+	gap: 0.25rem;
+	border-radius: 0.375rem;
 	background-color: var(--dark-color_10);
-	border: 1px solid var(--dark-color_15);
-	margin-bottom: 20px;
+	border: 0.0625rem solid var(--dark-color_15);
+	margin-bottom: 1.25rem;
 }
 
 .unlock-valuable-knowledge__board-with-foto {
-	padding: 23px 30px;
-	border-radius: 6px;
+	padding: 1.4375rem 1.875rem;
+	border-radius: 0.375rem;
 	background-color: var(--dark-color_10);
-	border: 1px solid var(--dark-color_15);
+	border: 0.0625rem solid var(--dark-color_15);
 }
 
 .unlock-valuable-knowledge__position-user-img-1 {
 	background-image: url(../sourse/img/image/image-1.jpg);
-	left: 6px;
+	left: 0.375rem;
 }
 
 .unlock-valuable-knowledge__position-user-img-2 {
 	background-image: url(../sourse/img/image/image-2.jpg);
-	left: 33px;
+	left: 2.0625rem;
 }
 
 .unlock-valuable-knowledge__position-user-img-3 {
 	background-image: url(../sourse/img/image/image-3.jpg);
-	left: 61px;
+	left: 3.8125rem;
 }
 
 .unlock-valuable-knowledge__position-user-img-4 {
 	background-image: url(../sourse/img/image/image-4.jpg);
-	left: 86px;
+	left: 5.375rem;
 }
 
 .unlock-valuable-knowledge__position-user-img-5 {
 	background-image: url(../sourse/img/image/image-5.jpg);
-	left: 6px;
+	left: 0.375rem;
 }
 
 .unlock-valuable-knowledge__position-user-img-6 {
 	background-image: url(../sourse/img/image/image-6.jpg);
-	left: 33px;
+	left: 2.0625rem;
 }
 
 .unlock-valuable-knowledge__position-user-img-7 {
 	background-image: url(../sourse/img/image/image-7.jpg);
-	left: 61px;
+	left: 3.8125rem;
 }
 
 .unlock-valuable-knowledge__position-user-img-8 {
 	background-image: url(../sourse/img/image/image-8.jpg);
-	left: 86px;
+	left: 5.375rem;
 }
-
 .unlock-valuable-knowledge__content {
-	padding: 40px 0;
+	padding: 2.5rem 0;
 }
 
 .unlock-valuable-knowledge_top-banner>h4 {
-	margin-bottom: 10px;
+	margin-bottom: 0.625rem;
 }
 
 .unlock-valuable-knowledge_top-banner>p {
-	margin-bottom: 24px;
+	margin-bottom: 1.5rem;
 }
 
 .unlock-valuable-knowledge__img1 {
 	width: 100%;
 	height: 0;
 	padding-top: 50%;
-	border-radius: 10px;
+	border-radius: 0.625rem;
 	background-image: url(../sourse/img/unlock-valuable-knowledge__img1.svg);
 	background-size: cover;
 	background-position: center;
@@ -118,7 +117,7 @@
 	width: 100%;
 	height: 0;
 	padding-top: 50%;
-	border-radius: 10px;
+	border-radius: 0.625rem;
 	background-image: url(../sourse/img/unlock-valuable-knowledge__img2.svg);
 	background-size: cover;
 	background-position: center;
@@ -126,51 +125,59 @@
 }
 
 .unlock-valuable-knowledge__content {
-	border-top: 1px solid var(--dark-color_15);
-	border-bottom: 1px solid var(--dark-color_15);
+	border-top: 0.0625rem solid var(--dark-color_15);
+	border-bottom: 0.0625rem solid var(--dark-color_15);
 }
 
 .unlock-valuable-knowledge__img-under-general-content_top-mobile-or-descktop {
-	margin: 24px 0 16px;
+	margin: 1.5rem 0 1rem;
 }
 
 .unlock-valuable-knowledge__img-under-general-content_top-mobile-or-top-left-descktop {
-	margin-bottom: 16px;
+	margin-bottom: 1rem;
 }
-
 .unlock-valuable-knowledge__img-under-general-content_top-mobile-or-top-left-descktop-key,
 .unlock-valuable-knowledge__img-under-general-content_medium-mobile-or-top-right-descktop-key,
 .unlock-valuable-knowledge__img-under-general-content_bottom-key {
-	margin-bottom: 2px;
+	margin-bottom: 0.125rem;
+	/* 2px / 16 = 0.125rem */
 }
 
 .unlock-valuable-knowledge__img-under-general-content_top-mobile-or-top-left-descktop {
 	background-color: var(--dark-color_10);
 	border: 1px solid var(--dark-color_15);
-	border-radius: 8px;
-	padding: 20px;
+	border-radius: 0.5rem;
+	/* 8px / 16 = 0.5rem */
+	padding: 1.25rem;
+	/* 20px / 16 = 1.25rem */
 }
 
 .unlock-valuable-knowledge__img-under-general-content_medium-mobile-or-top-right-descktop {
 	background-color: var(--dark-color_10);
 	border: 1px solid var(--dark-color_15);
-	border-radius: 8px;
-	padding: 20px;
-
+	border-radius: 0.5rem;
+	/* 8px / 16 = 0.5rem */
+	padding: 1.25rem;
+	/* 20px / 16 = 1.25rem */
 }
 
 .unlock-valuable-knowledge__img-under-general-content_bottom {
 	background-color: var(--dark-color_10);
 	border: 1px solid var(--dark-color_15);
-	border-radius: 8px;
-	padding: 20px;
+	border-radius: 0.5rem;
+	/* 8px / 16 = 0.5rem */
+	padding: 1.25rem;
+	/* 20px / 16 = 1.25rem */
 }
 
 .preview {
 	width: auto;
-	max-height: 49px;
-	padding: 14px 20px;
-	gap: 4px;
+	max-height: 3.0625rem;
+	/* 49px / 16 = 3.0625rem */
+	padding: 0.875rem 1.25rem;
+	/* 14px / 16 = 0.875rem, 20px / 16 = 1.25rem */
+	gap: 0.25rem;
+	/* 4px / 16 = 0.25rem */
 	background-color: var(--dark-color_08);
 	border: 1px solid var(--dark-color_10);
 	text-align: center;
@@ -180,8 +187,10 @@
 
 .btn__yellow-eye {
 	background-image: url(../sourse/img/yellow-eye.jpg);
-	width: 20px;
-	height: 20px;
+	width: 1.25rem;
+	/* 20px / 16 = 1.25rem */
+	height: 1.25rem;
+	/* 20px / 16 = 1.25rem */
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
