--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/styles.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/styles.css
@@ -10,7 +10,7 @@
 /* @import url(_swiper.css); */
 /* @import url(_footer.css); */
 /* @import url(_modal-window.css); */
-@import url(_button-sticky.css);
+/* @import url(_button-sticky.css); */
 
 :root {
 	--main-font: "Inter", sans-serif;
