--- a/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/styles.css
+++ b/my_works/MyProject/Explore_the_Frontiers_of_Artificial_Intelligence/styles/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 /* @import url(_variables.css); */
-@import url(_hero-section.css);
+/* @import url(_hero-section.css); */
 /* @import url(_future-tech-features.css); */
 /* @import url(_explore-futureTech.css); */
 /* @import url(_unlock-valuable-knowledge.css); */
@@ -31,6 +31,30 @@
 	--light_color_absolute: #fff;
 	--corporate-color: #FFD11A;
 }
+
+/* TODO hero-section*/
+/*----------------------------------------*/
+.mobile-menu {
+	width: 100vw;
+	height: calc(100vh - 11.5625rem - 4.375rem);
+	left: -10000px;
+	top: 10rem;
+	flex-direction: column;
+	gap: 1.25rem;
+	font-size: 3rem;
+	color: var(--grey-color_50);
+	transition: all 1.2s ease;
+	background-color: var(--dark-color_08);
+	z-index: 1;
+}
+.btn__header-mobile {
+	left: -10000px;
+}
+/*----------------------------------------*/
+
+
+
+/*TODO   GENERAL*/
 
 * {
 	margin: 0;
@@ -233,6 +257,229 @@ p,
 	transition: all 0.5s ease;
 }
 
+/* TODO hero-section*/
+
+.first-screen {
+	background-color: var(--dark-color_08);
+}
+
+.top-banner {
+	min-height: 4.625rem;
+	padding: 2.5625rem 0.5rem 0.9375rem;
+	gap: 0.625rem;
+	border-bottom: 1px solid var(--dark-color_15);
+	background-color: var(--dark-color_08);
+}
+
+.top-banner__content {
+	font-size: 0.75rem;
+	line-height: 1.125rem;
+	color: var(--grey-color_60);
+}
+
+.nav-bar {
+	height: 4.6875rem;
+}
+
+.logo-header {
+	width: 7.826rem;
+	height: 2.1875rem;
+	margin: 1.25rem 0 1.25rem;
+}
+
+.logo-header__img {
+	width: 2.1875rem;
+	height: 2.1875rem;
+}
+
+.logo-header__title {
+	font-size: 0.75rem;
+	font-weight: 700;
+	color: var(--light_color_absolute);
+	margin: auto 0;
+	padding-left: 0.561rem;
+}
+
+.burger-icons {
+	width: 31.25rem;
+	height: 3.125rem;
+}
+
+.main-menu .burger-menu {
+	color: var(--grey-color_50);
+}
+
+/*----------------------------------------*/
+
+
+
+/*----------------------------------------*/
+
+#btnMobileHeader>.btn {
+	width: 6.4375rem;
+	height: 2.5625rem;
+	border-radius: 0.375rem;
+	size: 0.875rem;
+	font-weight: 500;
+	background-color: var(--corporate-color);
+	margin-top: -1.875rem;
+	z-index: 5;
+}
+
+.burger-menu {
+	min-width: 1.59375rem;
+	height: 1.0625rem;
+	color: var(--light_color_absolute);
+	cursor: pointer;
+	margin-right: 0;
+}
+
+#closeIcon {
+	font-size: 1.59375rem;
+	margin-top: -0.25rem;
+	margin-left: 0.25rem;
+}
+
+.title-banner {
+	padding: 2.5rem 0 1.875rem;
+}
+
+.title-container__under-title {
+	font-size: 1.125rem;
+	font-family: var(--help-font);
+	color: var(--dark-color_40);
+	margin-bottom: 0.875rem;
+}
+
+.title-container__title {
+	margin-bottom: 0.625rem;
+}
+
+.title-container__content {
+	font-size: 0.875rem;
+	font-family: var(--main-font);
+	color: var(--grey-color_50);
+}
+
+.indicators-item {
+	max-height: 7.375rem;
+	padding: 1.25rem 0;
+	border-top: 1px solid var(--dark-color_15);
+}
+
+.indicators-item+.item-2 {
+	border-left: 1px solid var(--dark-color_15);
+	border-right: 1px solid var(--dark-color_15);
+}
+
+.item-2,
+.item-3 {
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
+}
+
+.item-1 {
+	padding-right: 1.25rem;
+}
+
+.number {
+	font-size: 1.5rem;
+	font-weight: 600;
+	font-family: var(--main-font);
+	color: var(--light_color_absolute);
+}
+
+.indicators-item_number>span {
+	color: var(--corporate-color);
+}
+
+.comment {
+	font-size: 0.875rem;
+	font-weight: 400;
+}
+
+.content_solar-corona {
+	display: grid;
+	grid-template-rows: 1fr auto;
+	background-image: url(../sourse/img/solar-corona.svg);
+	background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../sourse/img/solar-corona.svg);
+	background-size: cover;
+	background-position: top right;
+	background-repeat: no-repeat;
+}
+
+.content_solar-corona__users-img {
+	margin: 14.375rem 1.5rem 1.25rem;
+}
+
+.first-screen__content_solar-corona_title {
+	margin: 0 1.5rem 0.25rem;
+}
+
+.first-screen__content_solar-corona_comment {
+	margin: 0.25rem 1.5rem 1.25rem;
+}
+
+.btn-main-indicators {
+	margin: 1.25rem 1.5rem 2.5rem;
+	background-color: var(--dark-color_08);
+	border-radius: 0.5rem;
+	border: 1px solid var(--dark-color_15);
+	padding: 0.875rem 0;
+	justify-content: center;
+	align-items: center;
+	gap: 0.25rem;
+}
+
+.information-board__item>.icon {
+	width: 1.875rem;
+	height: 1.875rem;
+	margin-top: 1.875rem;
+	background-image: url(../sourse/img/sprite/css_sprites.png);
+	background-repeat: no-repeat;
+	background-size: 600%;
+}
+
+.information-board__item {
+	max-height: 11.5rem;
+	border-bottom: 1px solid var(--dark-color_15);
+	border-bottom: 1px solid #262626;
+}
+
+.first-item>.icon {
+	background-position: -8.8125rem -3.125rem;
+}
+
+.second-item>.icon {
+	background-position: -8.8125rem -0.4375rem;
+}
+
+.third-item>.icon {
+	background-position: -0.3125rem -8.3125rem;
+}
+
+.information-board__content {
+	margin-top: 1rem;
+}
+
+.information-board__content_title {
+	margin-bottom: 0.125rem;
+}
+
+.information-board_content>.comment {
+	font-size: 0.875rem;
+	font-weight: 400;
+}
+
+.information-board__item>.comment {
+	margin-top: 0.625rem;
+	margin-bottom: 1.875rem;
+}
+
+.information-board__content>button {
+	margin-left: 1rem;
+}
+
 /* TODO-first-screen__wiht-out-header mobile-version*/
 
 .parent__first-screen__wiht-out-header_grid {
@@ -348,300 +595,7 @@ p,
 	/* 86px */
 }
 
-/*TODO  hero-section*/
-.first-screen {
-	/* height: 100vh; */
-	background-color: var(--dark-color_08);
-}
 
-.top-banner {
-	min-height: 4.625rem;
-	/* 74px */
-	padding: 2.5625rem 0.5rem 0.9375rem;
-	/* 41px 8px 15px */
-	gap: 0.625rem;
-	/* 10px */
-	border-bottom: 1px solid var(--dark-color_15);
-	background-color: var(--dark-color_08);
-}
-
-.top-banner__content {
-	font-size: 0.75rem;
-	/* 12px */
-	line-height: 1.125rem;
-	/* 18px */
-	color: var(--grey-color_60);
-}
-
-.nav-bar {
-	height: 4.6875rem;
-	/* 75px */
-}
-
-.logo-header {
-	width: 7.826rem;
-	/* 125.23px */
-	height: 2.1875rem;
-	/* 35px */
-	margin: 1.25rem 0 1.25rem;
-}
-
-.logo-header__img {
-	width: 2.1875rem;
-	/* 35px */
-	height: 2.1875rem;
-	/* 35px */
-}
-
-.logo-header__title {
-	font-size: 0.75rem;
-	/* 12.01px */
-	font-weight: 700;
-	color: var(--light_color_absolute);
-	margin: auto 0;
-	padding-left: 0.561rem;
-	/* 8.97px */
-}
-
-.burger-icons {
-	width: 31.25rem;
-	/* 500px */
-	height: 3.125rem;
-	/* 50px */
-}
-
-.main-menu .burger-menu {
-	color: var(--grey-color_50);
-}
-
-/*-----------------------------------------------*/
-/*-----------------------------------------------*/
-/* .mobile-menu {
-	width: 100vw;
-	height: calc(100vh - 11.5625rem - 4.375rem);
-	left: -10000px;
-	top: 10rem;
-	flex-direction: column;
-	gap: 1.25rem;
-	font-size: 3rem;
-	color: var(--grey-color_50);
-	transition: all 1.2s ease;
-	background-color: var(--dark-color_08);
-	z-index: 1;
-}
-
-.btn__header-mobile {
-	left: -10000px;
-} */
-
-/*-----------------------------------------------*/
-
-
-#btnMobileHeader>.btn {
-	width: 6.4375rem;
-	/* 103px */
-	height: 2.5625rem;
-	/* 41px */
-	border-radius: 0.375rem;
-	/* 6px */
-	size: 0.875rem;
-	/* 14px */
-	font-weight: 500;
-	background-color: var(--corporate-color);
-	margin-top: -1.875rem;
-	/* -30px */
-	z-index: 5;
-}
-
-.burger-menu {
-	min-width: 1.59375rem;
-	/* 25.5px */
-	height: 1.0625rem;
-	/* 17px */
-	color: var(--light_color_absolute);
-	cursor: pointer;
-	margin-right: 0;
-}
-
-#closeIcon {
-	font-size: 1.59375rem;
-	/* 25.5px */
-	margin-top: -0.25rem;
-	/* -4px */
-	margin-left: 0.25rem;
-	/* 4px */
-}
-
-/*! start - first-screen__wiht-out-header*/
-.title-banner {
-	padding: 2.5rem 0 1.875rem;
-	/* 40px 0 30px */
-}
-
-.title-container__under-title {
-	font-size: 1.125rem;
-	/* 18px */
-	font-family: var(--help-font);
-	color: var(--dark-color_40);
-	margin-bottom: 0.875rem;
-	/* 14px */
-}
-
-.title-container__title {
-	margin-bottom: 0.625rem;
-	/* 10px */
-}
-
-.title-container__content {
-	font-size: 0.875rem;
-	/* 14px */
-	font-family: var(--main-font);
-	color: var(--grey-color_50);
-}
-
-.indicators-item {
-	max-height: 7.375rem;
-	/* 118px */
-	padding: 1.25rem 0;
-	border-top: 1px solid var(--dark-color_15);
-}
-
-.indicators-item+.item-2 {
-	border-left: 1px solid var(--dark-color_15);
-	border-right: 1px solid var(--dark-color_15);
-}
-
-.item-2,
-.item-3 {
-	padding-left: 1.25rem;
-	/* 20px */
-	padding-right: 1.25rem;
-	/* 20px */
-}
-
-.item-1 {
-	padding-right: 1.25rem;
-	/* 20px */
-}
-
-.number {
-	font-size: 1.5rem;
-	/* 24px */
-	font-weight: 600;
-	font-family: var(--main-font);
-	color: var(--light_color_absolute);
-}
-
-.indicators-item_number>span {
-	color: var(--corporate-color);
-}
-
-.comment {
-	font-size: 0.875rem;
-	/* 14px */
-	font-weight: 400;
-}
-
-.content_solar-corona {
-	display: grid;
-	grid-template-rows: 1fr auto;
-	background-image: url(../sourse/img/solar-corona.svg);
-	background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../sourse/img/solar-corona.svg);
-	background-size: cover;
-	background-position: top right;
-	background-repeat: no-repeat;
-}
-
-.content_solar-corona__users-img {
-	margin: 14.375rem 1.5rem 1.25rem;
-	/* 230px 24px 20px */
-}
-
-.first-screen__content_solar-corona_title {
-	margin: 0 1.5rem 0.25rem;
-	/* 24px 4px */
-}
-
-.first-screen__content_solar-corona_comment {
-	margin: 0.25rem 1.5rem 1.25rem;
-	/* 4px 24px 20px */
-}
-
-.btn-main-indicators {
-	margin: 1.25rem 1.5rem 2.5rem;
-	/* 20px 24px 40px */
-	background-color: var(--dark-color_08);
-	border-radius: 0.5rem;
-	/* 8px */
-	border: 1px solid var(--dark-color_15);
-	padding: 0.875rem 0;
-	justify-content: center;
-	align-items: center;
-	gap: 0.25rem;
-	/* 4px */
-}
-
-.information-board__item>.icon {
-	width: 1.875rem;
-	/* 30px */
-	height: 1.875rem;
-	/* 30px */
-	margin-top: 1.875rem;
-	/* 30px */
-	background-image: url(../sourse/img/sprite/css_sprites.png);
-	background-repeat: no-repeat;
-	background-size: 600%;
-}
-
-.information-board__item {
-	max-height: 11.5rem;
-	/* 184px */
-	border-bottom: 1px solid var(--dark-color_15);
-	border-bottom: 1px solid #262626;
-}
-
-.first-item>.icon {
-	background-position: -8.8125rem -3.125rem;
-	/* -141px -50px */
-}
-
-.second-item>.icon {
-	background-position: -8.8125rem -0.4375rem;
-	/* -141px -7px */
-}
-
-.third-item>.icon {
-	background-position: -0.3125rem -8.3125rem;
-	/* -5px -133px */
-}
-
-.information-board__content {
-	margin-top: 1rem;
-	/* 16px */
-}
-
-.information-board__content_title {
-	margin-bottom: 0.125rem;
-	/* 2px */
-}
-
-.information-board_content>.comment {
-	font-size: 0.875rem;
-	/* 14px */
-	font-weight: 400;
-}
-
-.information-board__item>.comment {
-	margin-top: 0.625rem;
-	/* 10px */
-	margin-bottom: 1.875rem;
-	/* 30px */
-}
-
-.information-board__content>button {
-	margin-left: 1rem;
-	/* 16px */
-}
 
 
 
